# 3DSLab

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  setup.ps1
cmake/: patch_bgfx.cmake
docs/: Doxyfile
shaders/: fs_imgui.sc  fs_mesh.sc  varying.def.sc  varying_imgui.def.sc  varying_line.def.sc  vs_imgui.sc  vs_mesh.sc
src/: Application.cpp  Application.h  Logger.h  MeshSelector.cpp  MeshSelector.h  main.cpp
src/3DS/: ChunkTypes.h  Importer.cpp  Importer.h  Scene.cpp  Scene.h
src/3DS/Animation/: AnimationHeaders.cpp  AnimationHeaders.h
src/3DS/Chunks/: Chunk.cpp  Chunk.h  ChunkFactory.h  ChunkRegistration.cpp  ChunkRegistration.h  Color24Chunk.cpp  Color24Chunk.h  ColorChunks.cpp  ColorChunks.h  ColorFChunk.cpp  ColorFChunk.h  ContainerChunks.h  FaceArrayChunk.cpp  FaceArrayChunk.h  KeyframeChunks.cpp  KeyframeChunks.h  M3dVersionChunk.cpp  M3dVersionChunk.h  MasterScaleChunk.cpp  MatNameChunk.cpp  MatNameChunk.h  MatPropertiesChunk.cpp  MatPropertiesChunk.h  MatShininessChunk.cpp  MatShininessChunk.h  MatTransparencyChunk.cpp  MatTransparencyChunk.h  MaterialChunks.cpp  MaterialChunks.h  MeshMatrixChunk.cpp  MeshMatrixChunk.h  MeshVersionChunk.cpp  MshMatGroupChunk.cpp  NTriObjectChunk.cpp  NTriObjectChunk.h  NamedObjectChunk.cpp  NodeHdrChunk.cpp  NodeHdrChunk.h  ObjectNodeChunks.cpp  ObjectNodeChunks.h  (+4 more)
src/3DS/Chunks/IO/: FileIO.cpp  FileIO.h
src/3DS/Samples/: 3d-model.3ds  55.3DS  55_small.3ds  LC_ChipmunkStudio_011922a2.3ds  corrupted mesh.3ds
src/3DS/SceneObjects/: Camera.h  Light.h  Material.h  Mesh.cpp  Mesh.h  ObjectNode.cpp  ObjectNode.h
src/3DS/UI/: SceneTreePanel.cpp  SceneTreePanel.h
src/Core/: AABB.h  CerrRedirect.h  Logger.h
src/Parser/: ChunkTypes.h  ChunksLevels.txt  Importer.cpp  Importer.h
src/Parser/Chunks/: AnimNodeChunks.cpp  AnimNodeChunks.h  CameraChunks.cpp  CameraChunks.h  Chunk.cpp  Chunk.h  ChunkFactory.h  ChunkRegistration.cpp  ChunkRegistration.h  ColorChunks.cpp  ColorChunks.h  ContainerChunks.h  FaceArrayChunk.cpp  FaceArrayChunk.h  KeyframeChunks.cpp  KeyframeChunks.h  LightChunks.cpp  LightChunks.h  M3dVersionChunk.cpp  M3dVersionChunk.h  MasterScaleChunk.cpp  MasterScaleChunk.h  MaterialChunks.cpp  MaterialChunks.h  MeshMatrixChunk.cpp  MeshMatrixChunk.h  MeshVersionChunk.cpp  MeshVersionChunk.h  MshMatGroupChunk.cpp  MshMatGroupChunk.h  NTriObjectChunk.cpp  NTriObjectChunk.h  NamedObjectChunk.cpp  NamedObjectChunk.h  NodeHdrChunk.cpp  NodeHdrChunk.h  ObjectNodeChunks.cpp  ObjectNodeChunks.h  PercentageChunk.cpp  PercentageChunk.h  (+6 more)
src/Rendering/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  MeshSelector.cpp  MeshSelector.h  MeshUploader.cpp  MeshUploader.h  Renderer.cpp  Renderer.h  TextureLoader.cpp  TextureLoader.h  Window.cpp  Window.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h
src/Scene/: Camera.h  CameraNode.h  Light.h  LightNode.h  Material.h  Mesh.cpp  Mesh.h  NamedObject.h  ObjectNode.cpp  ObjectNode.h  Scene.cpp  Scene.h
src/Scene/Animation/: AnimationHeaders.cpp  AnimationHeaders.h
src/UI/: SceneTreePanel.cpp  SceneTreePanel.h
